bin/testsuite/tests/compiler/src/errors/compiler4036.swg
//#global testerror
struct(T = s32) Point {}

var x: Point
